--- a/aifactory/src/main/webapp/resources/css/common.css
+++ b/aifactory/src/main/webapp/resources/css/common.css
@@ -38,14 +38,13 @@ h3, h4, h5, h6 {
 /*******************************************************************************************************
  Header 디자인
 *******************************************************************************************************/
-.navbar-brand img {
-	height: 2.2rem;
+.navbar {border-bottom: 0;}
+
+.navbar-light .navbar-nav-link.active {
+	color: #fff;
+	background-color: #81DAF5;
 }
 
-.navbar-brand {
-	padding-top: 0.0002rem;
-    padding-bottom: 0.0002rem;
-}
 
 .page-header .form-group {
 	margin-bottom: 0 !important;
@@ -66,83 +65,94 @@ h3, h4, h5, h6 {
 }
 
 .header-category {
-    font-weight: 400;
-    margin-bottom:0px;
-    margin-left:50px;
-    font-size: 14px;
-    font-family: 'Noto Sans KR', sans-serif;
-    }
-.custom-font{
-    font-family: 'Noto Sans KR', sans-serif;
-    
+	font-weight: 400;
+	margin-bottom: 0px;
+	margin-left: 50px;
+	font-size: 14px;
+	font-family: 'Noto Sans KR', sans-serif;
+}
+
+.custom-font {
+	font-family: 'Noto Sans KR', sans-serif;
 }
 /*******************************************************************************************************
  Modal 디자인
 *******************************************************************************************************/
+.navbar-dark {
+	background-color: #273246;
+}
+
+.navbar-brand {
+	padding-top: 0.4rem;
+	padding-bottom: 0.4rem;
+}
+
+.navbar-brand img {
+	height: 2.4rem;
+}
+
 .modal-header {
 	padding: 1.25rem !important;
-	border-bottom: 1px solid rgba(0,0,0,.125) !important;
+	border-bottom: 1px solid rgba(0, 0, 0, .125) !important;
 }
 
 .modal-footer {
 	padding: 1.25rem !important;
-	border-top: 1px solid rgba(0,0,0,.125) !important;
+	border-top: 1px solid rgba(0, 0, 0, .125) !important;
 }
 
 .modal-dialog.modal-80size {
-  width: 80%;
-  height: 60%;
-  margin: 0;
-  padding: 0;
+	width: 80%;
+	height: 60%;
+	margin: 0;
+	padding: 0;
 }
 
 .modal-content.modal-80size {
-  height: auto;
-  min-height: 60%;
+	height: auto;
+	min-height: 60%;
 }
 
 .modal.modal-center {
-  text-align: center;
+	text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-  .modal.modal-center:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 100%;
-  }
-
+	.modal.modal-center:before {
+		display: inline-block;
+		vertical-align: middle;
+		content: " ";
+		height: 100%;
+	}
 }
-@media screen and (max-width: 768px){
-      .header-category{
-            font-size:20px;
-            padding:3px 0px;
-            border-bottom:1px solid rgba(255,255,255,.1);
-            margin:0px;
-            padding:7px 30px;
-          }
-      .search-mobile{
-        width:100px;
-        float:left;
-        visibility:hidden;
-      }
-      .search-login-left{
-        position:absolute;
-        right:10px;
-      }
-      
-      .search-login{
-        float:left;
-        display:inline;
-      }
-      .login-logout{
-        margin:5px;
-        float:left;
-        display:inline;
-      }
-    
-} 
+
+@media screen and (max-width: 768px) {
+	.header-category {
+		font-size: 20px;
+		padding: 3px 0px;
+		border-bottom: 1px solid rgba(255, 255, 255, .1);
+		margin: 0px;
+		padding: 7px 30px;
+	}
+	.search-mobile {
+		width: 100px;
+		float: left;
+		visibility: hidden;
+	}
+	.search-login-left {
+		position: absolute;
+		right: 10px;
+	}
+	.search-login {
+		float: left;
+		display: inline;
+	}
+	.login-logout {
+		margin: 5px;
+		float: left;
+		display: inline;
+	}
+}
 
 .modal-dialog.modal-center {
   display: inline-block;
@@ -165,4 +175,8 @@ iframe {
 .ui-button-icon-only .ui-icon {
     margin-top: 0px;
     margin-left: 0px;
+}
+
+.search-btn {
+	width: 4rem;
 }
