--- a/aifactory/src/main/webapp/resources/css/common.css
+++ b/aifactory/src/main/webapp/resources/css/common.css
@@ -38,13 +38,27 @@ h3, h4, h5, h6 {
 /*******************************************************************************************************
  Header 디자인
 *******************************************************************************************************/
-.navbar {border-bottom: 0;}
+.navbar-dark {
+	background-color: #273246;
+}
+
+.navbar-brand {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.navbar-brand img {
+	height: 2.2rem;
+}
+
+.navbar {
+	border-bottom: 0;
+}
 
 .navbar-light .navbar-nav-link.active {
 	color: #fff;
 	background-color: #81DAF5;
 }
-
 
 .page-header .form-group {
 	margin-bottom: 0 !important;
@@ -56,7 +70,7 @@ h3, h4, h5, h6 {
 }
 
 .navbar-nav-highlight .navbar-nav-link, .navbar-nav-highlight .navbar-nav-link i {
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .tag-icon {
@@ -72,25 +86,9 @@ h3, h4, h5, h6 {
 	font-family: 'Noto Sans KR', sans-serif;
 }
 
-.custom-font {
-	font-family: 'Noto Sans KR', sans-serif;
-}
 /*******************************************************************************************************
  Modal 디자인
 *******************************************************************************************************/
-.navbar-dark {
-	background-color: #273246;
-}
-
-.navbar-brand {
-	padding-top: 0.4rem;
-	padding-bottom: 0.4rem;
-}
-
-.navbar-brand img {
-	height: 2.4rem;
-}
-
 .modal-header {
 	padding: 1.25rem !important;
 	border-bottom: 1px solid rgba(0, 0, 0, .125) !important;
